# HandmadeLlama

./: CMakeLists.txt  README.md
demo/: CMakeLists.txt  main.cpp
include/: alloc.hpp  base.hpp  buffer.hpp  layer.hpp  llama.hpp  model.hpp  row_model_data.hpp  tensor.hpp
include/op/: add.cuh  arg_max_sampler.cuh  embedding.cuh  encode.cuh  encode.hpp  matmul.cuh  mha.cuh  rmsnorm.cuh  rope.cuh  sampler.cuh  softmax.cuh  swiglu.cuh
source/: alloc.cu  alloc_cpu.cpp  alloc_gpu.cu  buffer.cpp  layer.cpp  llama.cpp  model.cpp  row_model_data.cpp  tensor.cpp
source/op/: add.cu  embedding.cu  encode.cpp  matmul.cu  mha.cu  rmsnorm.cu  rope.cu  sampler.cu  softmx.cu  swiglu.cu
test/: CMakeLists.txt  test_add.cpp  test_alloc.cpp  test_attention.cu  test_buffer.cpp  test_model.cpp  test_tensor.cpp
